--- a/dockerfile/postgresql/Dockerfile
+++ b/dockerfile/postgresql/Dockerfile
@@ -29,7 +29,7 @@ USER postgres
 #       allows the RUN command to span multiple lines.
 RUN    /etc/init.d/postgresql start &&\
     psql --command "CREATE USER solidarize WITH SUPERUSER PASSWORD 'solidarize';" &&\
-    createdb -O docker docker
+    createdb -O solidarize solidarize
 
 # Adjust PostgreSQL configuration so that remote connections to the
 # database are possible.
