--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,2 +1,4 @@
 spring.social.facebook.appId=10901902
 spring.social.facebook.appSecret=hfia71890hfaiu1241421
+
+DATABASE_URL=jdbc:postgresql://localhost:5432/solidarize
