--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-spring.social.facebook.appId=107556419780468
-spring.social.facebook.appSecret=9c95beb70d29cef65b76d749ca456df9
-
-spring.datasource.url= jdbc:postgresql://localhost:5432/solidarize
+spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=solidarize
 spring.datasource.password=solidarize
