--- a/pom.xml
+++ b/pom.xml
@@ -81,11 +81,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-social-facebook</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.social</groupId>
-            <artifactId>spring-social-facebook</artifactId>
-            <version>3.0.0.M1</version>
-        </dependency>
+<!--         <dependency> -->
+<!--             <groupId>org.springframework.social</groupId> -->
+<!--             <artifactId>spring-social-facebook</artifactId> -->
+<!--             <version>3.0.0.M1</version> -->
+<!--         </dependency> -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
