--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.datasource.password=solidarize
 rabbitmq.uri=${RABBITMQ_BIGWIG_URL}
 rabbitmq.mail.queue=${CLOUD_MAIL_QUEUE}
 rabbitmq.mail.exchange=${CLOUD_MAIL_EXCHANGE}
-rabbitmq.fetchMail.queue=${CLOUD_FETCHMAIL_QUEUE}
+rabbitmq.fetchmail.queue=${CLOUD_FETCHMAIL_QUEUE}
 rabbitmq.fetchmail.exchange=${CLOUD_FETCHMAIL_EXCHANGE}
