--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,3 +10,5 @@ sonar.sources=src
 sonar.language=java
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
+#path dos testes unitarios
+target/surefire-reports
