--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,10 +5,12 @@ sonar.projectName=solidarize
 #<version>
 sonar.projectVersion=1.0.0
 # Comma-separated paths to directories with sources (required)
-sonar.sources=src
+sonar.sources=src/main/java
+sonar.tests=src/test/java
 # Language
 sonar.language=java
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
 #path dos testes unitarios
-target/surefire-reports
+sonar.java.binaries=target/classes
+sonar.junit.reportPaths=target/surefire-reports
